# bki-rules-rag-chatbot

./: .env.example  .gitignore  README.md  chat.py  evaluate.py  ingest.py  pyproject.toml
data/: eval_questions.json  eval_questions.sample.json  eval_questions2.json
src/rag_chatbot/: __init__.py  chunking.py  config.py  embeddings.py  llm.py  pdf_loader.py  pipeline.py  reranker.py  retrieval.py  vector_store.py
src/rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
